Ensure that Terminal Help is Hidden on Mobile

--- a/src/styles/Wrapper.module.css
+++ b/src/styles/Wrapper.module.css
@@ -64,7 +64,7 @@
 
 @media (width <= 600px) {
     .hideOnMobile {
-        display: none;
+        display: none !important;
     }
 
     .showOnMobile {
